Mon Jun 11 15:16:59 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * docs/design/INSTANCE_HANDLES:

          Formatting change only.

Mon Jun 11 13:37:52 UTC 2012  Byron Harris  <harrisb@ociweb.com>

        * Merged from branch "temp_orb_refactor" which moves the ORB management
          from the Service_Participant to the InfoRepoDiscovery. For client code
          that does not use the InfoRepoDiscovery for discovery,
          this can remove an unneeded dependency on ORB code.
          For details see the branch-specific change log at
          docs/history/ChangeLog-ORB_refactor.

Sun Jun 10 17:42:36 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/dcps_tests.lst:
          Added new test

        * tests/DCPS/DpShutdown:
        * tests/DCPS/DpShutdown/DpShutdown.mpc:
        * tests/DCPS/DpShutdown/Messenger.idl:
        * tests/DCPS/DpShutdown/Messenger_export.h:
        * tests/DCPS/DpShutdown/dpshutdown.cpp:
        * tests/DCPS/DpShutdown/run_test.pl:
          New test that tests the fact that we can't remove a domain participant
          when it still contains entities. Also shutdown the service participant
          when it still has a domain participant registered, this triggers
          frequently an assert.

Fri Jun  8 17:03:06 UTC 2012  Trevor Fields  <fields_t@ociweb.com>

        * dds/DCPS/DataWriterImpl.cpp:
          Added missing duplicate for internal listener usage.

Fri Jun  8 09:29:05 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/DCPS/TopicReuse/tpreuse.cpp:
          Added find_topic, this would require us to call delete_topic
          twice

Fri Jun  8 09:15:16 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/dcps_tests.lst:
        * tests/DCPS/TopicReuse/Messenger.idl:
        * tests/DCPS/TopicReuse/Messenger_export.h:
        * tests/DCPS/TopicReuse/TopicReuse.mpc:
        * tests/DCPS/TopicReuse/rtps_disc.ini:
        * tests/DCPS/TopicReuse/run_test.pl: