@@ -1,3 +1,12 @@
+Tue Jun 12 15:21:29 UTC 2012  Byron Harris  <harrisb@ociweb.com>
+
+        * dds/DCPS/Service_Participant.cpp:
+
+          Move reactor initialization from ctor to
+          get_domain_participant_factory() to avoid
+          static initialization ordering issues
+          for DCPSInfoRepo under Windows.
+
 Mon Jun 11 15:16:59 UTC 2012  Adam Mitz  <mitza@ociweb.com>
 
         * docs/design/INSTANCE_HANDLES:
